tests/compile/shader_modules/subroutine_call.expected
#ifdef __clang__
subroutine_call.cpp:31:10: error: no matching function for call to object of type 'shader_stage<rcgp::ShaderStage::eSubroutine, rcgp::vector<float, 4>, rcgp::jems::null, rcgp::contract<texture>, rcgp::vector<float, 2>>'
   31 |                 return sr(uv);
      |                        ^~
shader_stage.hpp:115:7: note: candidate function not viable: requires 3 arguments, but 1 was provided
  115 |         auto operator()(const Args &... args)
      |              ^          ~~~~~~~~~~~~~~~~~~~~
1 error generated.
#elif defined(__GNUC__)
#if __GNUC__ == 16
tests/compile/shader_modules/subroutine_call.cpp: In lambda function:
tests/compile/shader_modules/subroutine_call.cpp:31:26: error: no match for call to '(rcgp::shader_stage<rcgp::ShaderStage::eSubroutine, rcgp::vector<float, 4>, rcgp::jems::null, rcgp::contract<texture>, rcgp::vector<float, 2> >) (rcgp::float2&)'
   31 |                 return sr(uv);
      |                        ~~^~~~
In file included from include/meta/interface_validation.hpp:3,
                 from include/meta/combinators.hpp:11,
                 from include/rcgp-meta.hpp:8,
                 from include/rcgp.hpp:4,
                 from tests/compile/shader_modules/subroutine_call.cpp:1:
  • there is 1 candidate
    include/meta/shader_stage.hpp:97:8:
       97 | struct shader_stage : SharedBlockReference {
          |        ^~~~~~~~~~~~
    • candidate 1: 'auto rcgp::shader_stage<S, R, Args>::operator()(const Args& ...) [with rcgp::ShaderStage S = rcgp::ShaderStage::eSubroutine; R = rcgp::vector<float, 4>; Args = {rcgp::jems::null, rcgp::contract<texture>, rcgp::vector<float, 2>}]'
      include/meta/shader_stage.hpp:115:14:
        115 |         auto operator()(const Args &... args)
            |              ^~~~~~~~
      • candidate expects 3 arguments, 1 provided
#elif __GNUC__ == 15
tests/compile/shader_modules/subroutine_call.cpp: In lambda function:
tests/compile/shader_modules/subroutine_call.cpp:31:26: error: no match for call to '(rcgp::shader_stage<rcgp::ShaderStage::eSubroutine, rcgp::vector<float, 4>, rcgp::jems::null, rcgp::contract<texture>, rcgp::vector<float, 2> >) (rcgp::float2&)'
   31 |                 return sr(uv);
      |                        ~~^~~~
In file included from include/meta/interface_validation.hpp:3,
                 from include/meta/combinators.hpp:11,
                 from include/rcgp-meta.hpp:8,
                 from include/rcgp.hpp:4,
                 from tests/compile/shader_modules/subroutine_call.cpp:1:
include/meta/shader_stage.hpp:97:8: note: there is 1 candidate
   97 | struct shader_stage : SharedBlockReference {
      |        ^~~~~~~~~~~~
include/meta/shader_stage.hpp:115:14: note: candidate 1: 'auto rcgp::shader_stage<S, R, Args>::operator()(const Args& ...) [with rcgp::ShaderStage S = rcgp::ShaderStage::eSubroutine; R = rcgp::vector<float, 4>; Args = {rcgp::jems::null, rcgp::contract<texture>, rcgp::vector<float, 2>}]'
  115 |         auto operator()(const Args &... args)
      |              ^~~~~~~~
include/meta/shader_stage.hpp:115:14: note: candidate expects 3 arguments, 1 provided
#endif
#endif
